--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.marassu.petition_android">
+    package="com.marassu.petition">
 
     <application
-        android:name=".di.App"
+        android:name="com.marassu.petition.di.App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.PetitionAndroid"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name="com.marassu.petition.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.PetitionAndroid">
