--- a/.github/workflows/androidBuild.yml
+++ b/.github/workflows/androidBuild.yml
@@ -1,10 +1,8 @@
-name: Android CI
+name: Android Build CI
 
 on:
-  push:
-    branches: [ "develop" ]
   pull_request:
-    branches: [ "develop" ]
+    branches: [ develop, main ]
 
 jobs:
   build:
