--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
-        android:name="com.marassu.petition.di.App"
+        android:name=".di.App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -13,7 +13,12 @@
         android:theme="@style/Theme.PetitionAndroid"
         tools:targetApi="31">
         <activity
-            android:name="com.marassu.petition.MainActivity"
+            android:name=".view.petition_list.PetitiionListItem"
+            android:exported="false"
+            android:label="@string/title_activity_petition_list_item"
+            android:theme="@style/Theme.PetitionAndroid" />
+        <activity
+            android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.PetitionAndroid">
