--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,11 +26,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.PetitionAndroid"></activity>
-        <activity
-            android:name=".feature.auth.AuthActivity"
-            android:theme="@style/Theme.PetitionAndroid">
-        </activity>
+            android:theme="@style/Theme.PetitionAndroid" />
         <activity android:name=".feature.petition_detail.PetitionDetailActivity"
             android:exported="false"/>
         <activity android:name=".feature.auth.AuthActivity"
